# Easy_Pokedex

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  easy_pokedex.py  pokemon_data.json  pyproject.toml
.github/workflows/: docker-image.yml
documentation/: easy_pokedex.html  main_program.html
easy_pokedex/: __init__.py  main_program.py
tests/: __init__.py  test_easyPokedex.py
